# rustlang-axum-small-projects

./: Cargo.toml  README.md
src/basic-auth-example/: Cargo.toml  localhost-key.pem  localhost.pem  main.rs
src/bookstore/: .env.example  Cargo.toml  main.rs
src/cookies/: Cargo.toml  main.rs
src/handler-servemux/: Cargo.toml  main.rs
src/middlewares/: Cargo.toml  main.rs  very_simple_middleware.rs
src/ratelimit-demo/: Cargo.toml  main.rs
src/redis-example-app/: Cargo.toml  main.rs
src/response-snippets/: Cargo.toml  main.rs
src/static-site/: Cargo.toml  main.rs
