[package]
name = "bookstore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
bigdecimal = "0.4.1"
dotenv = "0.15.0"
serde = { version = "1.0.183", features = ["derive"] }
sqlx = { version = "0.7.1", features = [
    "postgres",
    "runtime-tokio",
    "bigdecimal",
    "macros",
] }
tokio = { version = "1.29.1", features = ["full"] }
