[package]
name = "cookies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.19", features = ["tokio"] }
axum-extra = { version = "0.7.6", features = ["cookie", "cookie-signed"] }
base64 = "0.21.2"
tokio = { version = "1.29.1", features = ["full"] }
