[package]
name = "rust-response-snippets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.19"
minijinja = { version = "1.0.5", features = ["builtins"] }
serde = { version = "1.0.175", features = ["derive"] }
serde-xml-rs = "0.6.0"
tokio = { version = "1.29.1", features = ["full"] }
tracing-subscriber = "0.3.17"
